# resolve-slack-notifier

./: .env_sample  main.py  pyproject.toml  requirements.txt  resolve-slack-notifier.py
